--- a/trunk/modules/Hydrogen/Gallery/Compact/locales/de/html/gallery/license.html
+++ b/trunk/modules/Hydrogen/Gallery/Compact/locales/de/html/gallery/license.html
@@ -1,7 +1,7 @@
-<div id="licence">
+<div id="license">
 	<div style="float: left; margin-right: 2em;">
 		<a rel="license" href="<%path%>">
-			<img alt="Creative Commons Lizenzvertrag" style="border-width: 0; width: 88px; height: 31px" src="<%image%>"/>
+			<img alt="Creative Commons Lizenzvertrag" style="border-width: 0; width: 80px; height: 15px" src="<%image%>"/>
 		</a>
 	</div>
 	<div>
@@ -10,10 +10,10 @@
 			<%work.title%>
 		</span>
 		von
-		<a xmlns:cc="http://creativecommons.org/ns#" href="<%work.url%>" property="cc:attributionName" rel="cc:attributionURL">
+		<a xmlns:cc="http://creativecommons.org/ns#" href="<%work.url%>" property="cc:attributionName" rel="cc:attributionURL" class="icon-label link-external">
 			<%work.creator%>
 		</a>
 		steht unter einer
-		<a rel="license" href="<%path%>"><%label%></a>.
+		<a rel="license" href="<%path%>" class="icon-label link-external" title="<%label%>">Creative Commons Lizenz</a>.
 	</div>
 </div>		
