Modules/Hydrogen: Updated module Gallery:Compact.

--- a/Gallery/Compact/locales/de/html/gallery/index.bottom.html
+++ b/Gallery/Compact/locales/de/html/gallery/index.bottom.html
@@ -1,16 +1,19 @@
-<span xmlns:dc="http://purl.org/dc/elements/1.1/" href="http://purl.org/dc/dcmitype/StillImage" property="dc:title" rel="dc:type">
-  Diese Gallerien
-</span>
-von
-<a xmlns:cc="http://creativecommons.org/ns#" href="mailto:kriss@ceus-media.de" property="cc:attributionName" rel="cc:attributionURL">kriss</a>
-stehen unter der Lizenz
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/">
-  Creative Commons Namensnennung-Keine kommerzielle Nutzung-Weitergabe unter gleichen Bedingungen 3.0 Deutschland
-</a>.<br/>
-<br/>
-Wie der Lizenzname schon sagt, können die Bilder geladen, verbreitet und verarbeitet werden, solange der Urheber genannt oder verlinkt wird und sie nicht kommerziell genutzt werden.<br/>
-<br/>
-<!--
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by-nc-sa/3.0/de/80x15.png"></a><br/>
+Die Bilder innerhalb dieser Galerien unterliegen der Lizenz <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/" class="icon-label link-external" target="_blank">Creative Commons BY-NC-SA 3.0 Deutschland</a>.<br/>
+<hr/>
+<div style="font-size: 0.9em">
+	<div class="column-left-50">
+		Falls du ein Bild verwenden möchtest, bedeutet das für dich:
+		list>
+		- Weitergabe unter gleichen Bedingungen
+		- Namensnennung bei Nutzung
+		- Keine kommerzielle Nutzung
+		<list
+	</div>
+	<div class="column-right-50">
+		<b>Ergo:</b><br/>
+		Die Bilder können geladen, verbreitet und verarbeitet werden, solange der Urheber genannt und verlinkt wird. Kommerzielle Nutzung ist nicht gestattet, aber darüber können wir reden.<br/>
+	</div>
+	<div class="column-clear"></div>
+</div>
 
--->
+<br/>
