--- a/Server/System/Load/locales/en/html/error/503.html
+++ b/Server/System/Load/locales/en/html/error/503.html
@@ -1,4 +1,5 @@
-<h1>HTTP Error 503 - Too Busy</h1>
+<h1>Service Unavailable</h1>
+<b><em>Server is too busy - please try again later</em></b>
 <p>
 	Due to heavy load this application is temporarily not available.<br/>
 	Please try again later.
