--- a/trunk/modules/Hydrogen/Server/System/Load/locales/de/html/error/503.html
+++ b/trunk/modules/Hydrogen/Server/System/Load/locales/de/html/error/503.html
@@ -1,5 +1,6 @@
-<h1>HTTP Error 503 - Too Busy</h1>
+<h1>Service nicht verfügbar</h1>
+<b><em>Server-Überlastung - bitte später wieder probieren!</em></b>
 <p>
-	Due to heavy load this application is temporarily not available.<br/>
-	Please try again later.
+	Der Server steht wegen Überlastung temporär nicht zur Verfügung.<br/>
+	Bitte probieren Sie es später wieder.
 </p>
