Modules/Hydrogen: Updated module Work:FTP.

--- a/Work/FTP/locales/de/html/work/ftp/login.info.html
+++ b/Work/FTP/locales/de/html/work/ftp/login.info.html
@@ -3,7 +3,7 @@ Um die Dateien auf dem Server zu sehen, muss eine Verbindung zum FTP-Server herg
 Bitte gib hier deine Zugangsdaten ein:
 <dl>
 	<dt>Host</dt>
-	<dd>IP-Adresse oder DNS-Name des FTP-Servers <small class="muted"><em>(ohne ftp://)</em></small>.</dd>
+	<dd>IP-Adresse oder DNS-Name des FTP-Servers.</dd>
 	<dt>Port</dt>
 	<dd>Port-Nummer des FTP-Servers, meist 21.</dd>
 	<dt>Pfad</dt>
