Modules/Hydrogen: Updated module Work:Missions.

--- a/Work/Missions/locales/de/html/work/mission/index.empty.html
+++ b/Work/Missions/locales/de/html/work/mission/index.empty.html
@@ -14,10 +14,11 @@ Entweder wurden noch keine angelegt oder die Suche mittels der Filter führte in
 <br/>
 <div>
 	<div style="float: left; width: 80px">
-		<button type="button" class="icon-text" onclick="document.location.href='./work/mission/add?type=0';">
-			<img src="http://img.int1a.net/famfamfam/silk/script_add.png"><br/>
+		<a class="btn btn-large not-icon-text" style="width: 70px" href="./work/mission/add?type=0">
+			<!--<img src="http://img.int1a.net/famfamfam/silk/script_add.png"><br/>-->
+			<i class="icon-wrench"></i><br/>
 			Aufgabe
-		</button>
+		</a>
 	</div>
 	<div style="margin-left: 120px; min-height: 60px">
 		<h4>Neue Aufgabe</h4>
@@ -29,10 +30,11 @@ Entweder wurden noch keine angelegt oder die Suche mittels der Filter führte in
 <br/>
 <div>
 	<div style="float: left; width: 80px">
-		<button type="button" class="icon-text" onclick="document.location.href='./work/mission/add?type=1';">
-			<img src="http://img.int1a.net/famfamfam/silk/date_add.png"><br/>
+		<a class="btn btn-large not-icon-text" style="width: 70px" href="./work/mission/add?type=1">
+			<!--<img src="http://img.int1a.net/famfamfam/silk/date_add.png"><br/>-->
+			<i class="icon-time"></i><br/>
 			Termin
-		</button>
+		</a>
 	</div>
 	<div style="margin-left: 120px; min-height: 60px">
 		<h4>Neuer Termin</h4>
