--- a/Manage/Catalog/locales/de/html/manage/catalog/article/index.html
+++ b/Manage/Catalog/locales/de/html/manage/catalog/article/index.html
@@ -4,6 +4,6 @@
 		Du bist in der Verwaltung...
 	</p>
 	<div class="content-panel-inner">
-		<a href="./manage/catalog/article/add" class="btn btn-success"><i class="icon-plus icon-white"></i> '.$w->buttonAdd.'</a>
+		<a href="./manage/catalog/article/add" class="btn btn-success"><i class="icon-plus icon-white"></i> hinzufügen</a>
 	</div>
 </div>
