Rearrange templates and text blocks.

--- a/Resource/Authentication/locales/de/html/auth/confirm/info.html
+++ b/Resource/Authentication/locales/de/html/auth/confirm/info.html
@@ -1,4 +1,4 @@
-<div class="content-panel">
+<div class="content-panel content-panel-info">
 	<h3>Anleitung</h3>
 	<div class="content-panel-inner">
 		<p>
