--- a/Resource/Authentication/locales/de/html/auth/register/info.html
+++ b/Resource/Authentication/locales/de/html/auth/register/info.html
@@ -1,5 +1,5 @@
 <!--
-<div class="content-panel">
+<div class="content-panel content-panel-info">
 	<h3>Information</h3>
 	<div class="content-panel-inner">
 		...
