Handle sync link in browser with new help view.

--- a/Work/Missions/locales/de/html/work/mission/index.empty.html
+++ b/Work/Missions/locales/de/html/work/mission/index.empty.html
@@ -7,51 +7,87 @@ h4 {
 		margin-bottom: 0.4em;
 	}
 </style>
+<div class="row-fluid">
+	<div class="span8">
+<div class="content-panel content-panel-info">
+	<h3>Aufgaben und Termine</h3>
+	<div class="content-panel-inner">
+		Es wurden keine Einträge gefunden.<br/>
+		Entweder wurden noch keine angelegt oder die Suche mittels der Filter führte ins Leere.<br/>
+		<br/>
+		<div class="row-fluid">
+			<div class="span6">
+				<h4><i class="fa fa-fw fa-wrench"></i>&nbsp;Aufgaben</h4>
+				<p>
+					Aufgaben beziehen sich auf einen Tag ohne zeitliche Bindung.
+					Entweder sollen sie an diesem Tag begonnen oder beendet werden.
+					Sie werden solange angezeigt, bis sie erledigt wurden.
+				</p>
+					
+<!--
+				<h4>Neue Aufgabe <a href="./work/mission/add?type=0" class="btn btn-success btn-mini"><i class="icon-plus icon-white"></i></a></h4>
+				<div style="float: left; width: 80px;">
+					<a class="btn btn-large not-icon-text btn-success" style="width: 70px" href="./work/mission/add?type=0">
+						<i class="icon-wrench icon-white"></i><br/>
+						Aufgabe
+					</a>
+				</div>
+				<div style="margin-left: 120px; min-height: 60px">
+					Aufgaben beziehen sich auf einen Tag. Entweder sollen sie an diesem Tag begonnen oder beendet werden.
+					Sie werden solange angezeigt, bis sie erledigt wurden.
+				</div>-->
+			</div>
+			<div class="span6">
+				<h4><i class="fa fa-fw fa-clock-o"></i>&nbsp;Termine</h4>
+				<p>
+					Termine beziehen sich auf einen Tag und eine Uhrzeit.<br/>
+					Aus sie werden solange angezeigt, bis sie erledigt wurden.<br/>
+				</p>
+					
+<!--				<h4>Neuer Termin <a href="./work/mission/add?type=1" class="btn btn-success btn-small"><i class="icon-plus icon-white"></i></a></h4>
+				<div style="float: left; width: 80px">
+					<a class="btn btn-large not-icon-text btn-success" style="width: 70px" href="./work/mission/add?type=1">
+						<i class="icon-time icon-white"></i><br/>
+						Termin
+					</a>
+				</div>
+				<div style="margin-left: 120px; min-height: 60px">
+					Termine sind wie Aufgaben, aber beziehen sich auf einen bestimmten Zeitraum.<br/>
+				</div>-->
+			</div>
+		</div>
+		<br/>
+		<p>Aufgaben können zu Terminen konvertiert werden und umgekehrt.</p>
+		<div class="buttonbar">
+				<a href="./work/mission/add?type=0" class="btn btn-success not-btn-small"><i class="icon-plus icon-white"></i>&nbsp;Neue Aufgabe</a>
+				<a href="./work/mission/add?type=1" class="btn btn-success not-btn-small"><i class="icon-plus icon-white"></i>&nbsp;Neuer Termin</a>
+		</div>
+	</div>
+</div>
+	</div>
+	<div class="span4">
+		<div class="content-panel content-panel-info">
+			<h3><span class="muted">Tipp:</span> Synchronisation</h4>
+			<div class="content-panel-inner">
+				<p>
+					Die Aufgaben und Termine können mit Kalender-Programmen, wie z.B. <cite>Apple iCal</cite>, <cite>Microsoft Outlook</cite> oder <cite>Mozilla Thunderbird</cite>, synchronisiert werden.<br/>
+				</p>
+<!--				Hier finden Sie eine <a href="./work/mission/help/sync">Anleitung</a>.-->
+				<div class="buttonbar">
+					<a href="./work/mission/help/sync" class="btn btn-info btn-small"><i class="icon-question-sign icon-white"></i>&nbsp;zur Anleitung</a>
+				</div>
+<!--				 für <cite>Mozilla Thunderbird</cite>:
+				<ul>
+					<li>diesen <a href="./work/mission/export/ical">Link</a> in Zwischenablage kopieren</li>
+					<li><cite>Mozilla Thunderbird</cite> öffnen <small>(Erweiterung <cite>Lightning</cite> muss installiert sein)</small></li>
+					<li>Menü: <b>Datei</b> -> <b>Neu</b> -> <b>Kalender</b></li>
+					<li>Quelle "Im Netzwerk" auswählen, weiter</li>
+					<li>Format "iCalendar (ICS)" auswählen, als Adresse den kopierten Link eintragen, weiter</li>
+					<li>Name <small>(z.B. "dolibri: Aufgaben und Termine")</small> vergeben</li>
+					<li>ggfs. Farbe für die Kalenderblöcke wählen</li>
+				</ul>-->
+			</div>
+		</div>
+	</div>
+</div>
 
-<h3>Aufgaben und Termine</h3>
-Es wurden keine Einträge gefunden.<br/>
-Entweder wurden noch keine angelegt oder die Suche mittels der Filter führte ins Leere.<br/>
-<br/>
-<div>
-	<div style="float: left; width: 80px">
-		<a class="btn btn-large not-icon-text" style="width: 70px" href="./work/mission/add?type=0">
-			<!--<img src="http://img.int1a.net/famfamfam/silk/script_add.png"><br/>-->
-			<i class="icon-wrench"></i><br/>
-			Aufgabe
-		</a>
-	</div>
-	<div style="margin-left: 120px; min-height: 60px">
-		<h4>Neue Aufgabe</h4>
-		Aufgaben beziehen sich auf einen Tag. Entweder sollen sie an diesem Tag begonnen oder beendet werden.<br/>
-		Sie werden solange angezeigt, bis sie erledigt wurden.<br/>
-		
-	</div>
-</div>
-<br/>
-<div>
-	<div style="float: left; width: 80px">
-		<a class="btn btn-large not-icon-text" style="width: 70px" href="./work/mission/add?type=1">
-			<!--<img src="http://img.int1a.net/famfamfam/silk/date_add.png"><br/>-->
-			<i class="icon-time"></i><br/>
-			Termin
-		</a>
-	</div>
-	<div style="margin-left: 120px; min-height: 60px">
-		<h4>Neuer Termin</h4>
-		Termine sind wie Aufgaben, aber beziehen sich auf einen bestimmten Zeitraum.<br/>
-		Aufgaben können zu Terminen konvertiert werden und umgekehrt.
-	</div>
-</div>
-<br/>
-<br/>
-<h4>Import in <cite>Mozilla Thunderbird</cite></h4>
-Die Aufgaben und Termine können in Kalender-Programmen, wie z.B. <cite>Apple iCal</cite>, <cite>Microsoft Outlook</cite> oder <cite>Mozilla Thunderbird</cite>, importiert werden.<br/>
-Hier die Anleitung für <cite>Mozilla Thunderbird</cite>:
-<ul>
-	<li>diesen <a href="./work/mission/export/ical">Link</a> in Zwischenablage kopieren</li>
-	<li><cite>Mozilla Thunderbird</cite> öffnen <small>(Erweiterung <cite>Lightning</cite> muss installiert sein)</small></li>
-	<li>Menü: <b>Datei</b> -> <b>Neu</b> -> <b>Kalender</b></li>
-	<li>Quelle "Im Netzwerk" auswählen, weiter</li>
-	<li>Format "iCalendar (ICS)" auswählen, als Adresse den kopierten Link eintragen, weiter</li>
-	<li>Name <small>(z.B. "Aufgaben und Termine")</small> vergeben und Farbe für die Terminblöcke wählen</li>
-</ul>
