Develope local authentication.

--- a/Resource/Authentication/Backend/Local/locales/de/html/auth/local/login/info.html
+++ b/Resource/Authentication/Backend/Local/locales/de/html/auth/local/login/info.html
@@ -15,11 +15,11 @@
 		</p>
 		<h4>Du hast noch kein Benutzerkonto?</h4>
 		<p>
-			Erstelle dir bitte ein Benutzerkonto über die <a href="./auth/register?from=<%?from%>">Registierung</a>!
+			Erstelle dir bitte ein Benutzerkonto über die <a href="./auth/local/register?from=<%?from%>">Registierung</a>!
 		</p>
 		<h4>Du hast dein Passwort vergessen?</h4>
 		<p>
-			Solltest du dein Passwort vergessen haben, kannst du dir ein <a href="./auth/password">neues Passwort</a> per E-Mail zusenden lassen.
+			Solltest du dein Passwort vergessen haben, kannst du dir ein <a href="./auth/local/password">neues Passwort</a> per E-Mail zusenden lassen.
 			Bitte ändere dieses Passwort nach dem nächsten Login.
 		</p>
 	</div>
