--- a/Resource/Authentication/Backend/Local/locales/en/html/auth/local/login/info.html
+++ b/Resource/Authentication/Backend/Local/locales/en/html/auth/local/login/info.html
@@ -13,11 +13,11 @@
 		</p>
 		<h4>No user account, yet?</h4>
 		<p>
-			Please create a new user account by <a href="./auth/register?from=<%?from%>">signing up</a>!
+			Please create a new user account by <a href="./auth/local/register?from=<%?from%>">signing up</a>!
 		</p>
 		<h4>Forgot your password?</h4>
 		<p>
-			You can create a <a href="./auth/password">new password</a> which will be mailed to you.
+			You can create a <a href="./auth/local/password">new password</a> which will be mailed to you.
 			Please change this password after your next log in.
 		</p>
 	</div>
