--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Hydrogen Modules</h1>
-      <h2 class="project-tagline">Set of free modules for Hydrogen Framework.</h2>
+      <h2 class="project-tagline">A set of open and free modules for Hydrogen framework.</h2>
       <a href="https://github.com/CeusMedia/HydrogenModules" class="btn">View on GitHub</a>
       <a href="https://github.com/CeusMedia/HydrogenModules/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/CeusMedia/HydrogenModules/tarball/master" class="btn">Download .tar.gz</a>
