--- a/Resource/Authentication/Backend/JSON/locales/de/html/auth/json/login/info.html
+++ b/Resource/Authentication/Backend/JSON/locales/de/html/auth/json/login/info.html
@@ -1,13 +1,13 @@
-<div class="content-panel content-panel-info">
-	<h3>Information</h3>
-	<div class="content-panel-inner">
-		<p>
-			Ab hier brauchst du ein Benutzerkonto und musst dich einloggen,
-			um weiter zu kommen.
-		</p>
-		<p>
-			Wenn du dich in Zukunft nicht mehr einloggen möchtest,
-			kannst du auch dauerhaft angemeldet bleiben.
-		</p>
+<div id="text-auth-login-info" class="text-auth-info">
+<!--
+	<div class="content-panel content-panel-info">
+		<h3>Information</h3>
+		<div class="content-panel-inner">
+			<p>
+				Ab hier brauchst du ein Benutzerkonto und musst dich einloggen,
+				um weiter zu kommen.
+			</p>
+		</div>
 	</div>
+-->
 </div>
