--- a/Work/Missions/locales/de/html/work/mission/index.empty.html
+++ b/Work/Missions/locales/de/html/work/mission/index.empty.html
@@ -16,51 +16,27 @@ h4 {
 		Entweder wurden noch keine angelegt oder die Suche mittels der Filter führte ins Leere.<br/>
 		<br/>
 		<div class="row-fluid">
-			<div class="span6">
-				<h4><i class="fa fa-fw fa-wrench"></i>&nbsp;Aufgaben</h4>
+			<div class="span5 offset1">
+				<h4><i class="fa fa-fw fa-thumb-tack"></i>&nbsp;Aufgaben</h4>
 				<p>
 					Aufgaben beziehen sich auf einen Tag ohne zeitliche Bindung.
 					Entweder sollen sie an diesem Tag begonnen oder beendet werden.
-					Sie werden solange angezeigt, bis sie erledigt wurden.
+					Sie werden in der Listenansicht solange angezeigt, bis sie erledigt wurden.
 				</p>
-					
-<!--
-				<h4>Neue Aufgabe <a href="./work/mission/add?type=0" class="btn btn-success btn-mini"><i class="icon-plus icon-white"></i></a></h4>
-				<div style="float: left; width: 80px;">
-					<a class="btn btn-large not-icon-text btn-success" style="width: 70px" href="./work/mission/add?type=0">
-						<i class="icon-wrench icon-white"></i><br/>
-						Aufgabe
-					</a>
-				</div>
-				<div style="margin-left: 120px; min-height: 60px">
-					Aufgaben beziehen sich auf einen Tag. Entweder sollen sie an diesem Tag begonnen oder beendet werden.
-					Sie werden solange angezeigt, bis sie erledigt wurden.
-				</div>-->
 			</div>
-			<div class="span6">
+			<div class="span4 offset1">
 				<h4><i class="fa fa-fw fa-clock-o"></i>&nbsp;Termine</h4>
 				<p>
 					Termine beziehen sich auf einen Tag und eine Uhrzeit.<br/>
-					Aus sie werden solange angezeigt, bis sie erledigt wurden.<br/>
+					In der Listenansicht werden auch vergangene Termine angezeigt, bis sie abgeschlossen wurden.<br/>
 				</p>
-					
-<!--				<h4>Neuer Termin <a href="./work/mission/add?type=1" class="btn btn-success btn-small"><i class="icon-plus icon-white"></i></a></h4>
-				<div style="float: left; width: 80px">
-					<a class="btn btn-large not-icon-text btn-success" style="width: 70px" href="./work/mission/add?type=1">
-						<i class="icon-time icon-white"></i><br/>
-						Termin
-					</a>
-				</div>
-				<div style="margin-left: 120px; min-height: 60px">
-					Termine sind wie Aufgaben, aber beziehen sich auf einen bestimmten Zeitraum.<br/>
-				</div>-->
 			</div>
 		</div>
 		<br/>
 		<p>Aufgaben können zu Terminen konvertiert werden und umgekehrt.</p>
 		<div class="buttonbar">
-				<a href="./work/mission/add?type=0" class="btn btn-success not-btn-small"><i class="icon-plus icon-white"></i>&nbsp;Neue Aufgabe</a>
-				<a href="./work/mission/add?type=1" class="btn btn-success not-btn-small"><i class="icon-plus icon-white"></i>&nbsp;Neuer Termin</a>
+				<a href="./work/mission/add?type=0" class="btn btn-success not-btn-small"><i class="fa fa-fw fa-plus"></i>&nbsp;Neue Aufgabe</a>
+				<a href="./work/mission/add?type=1" class="btn btn-success not-btn-small"><i class="fa fa-fw fa-plus"></i>&nbsp;Neuer Termin</a>
 		</div>
 	</div>
 </div>
@@ -74,7 +50,7 @@ h4 {
 				</p>
 <!--				Hier finden Sie eine <a href="./work/mission/help/sync">Anleitung</a>.-->
 				<div class="buttonbar">
-					<a href="./work/mission/help/sync" class="btn btn-info btn-small"><i class="icon-question-sign icon-white"></i>&nbsp;zur Anleitung</a>
+					<a href="./work/mission/help/sync" class="btn btn-info btn-small"><i class="fa fa-fw fa-question-circle"></i>&nbsp;zur Anleitung</a>
 				</div>
 <!--				 für <cite>Mozilla Thunderbird</cite>:
 				<ul>
@@ -90,4 +66,3 @@ h4 {
 		</div>
 	</div>
 </div>
-
