Improve info on empty dashboard.

--- a/Info/Dashboard/locales/de/html/info/dashboard/empty.html
+++ b/Info/Dashboard/locales/de/html/info/dashboard/empty.html
@@ -1,4 +1,86 @@
 <div id="text-info-dashboard-empty" class="text-auth-top">
+	<div class="row-fluid">
+		<div class="span6">
+			<div class="content-panel">
+				<h3>Hallo <%?user.username%>!</h3>
+				<div class="content-panel-inner">
+					<p>
+						Das ist die Startseite im eingeloggten Bereich.<br/>
+					</p>
+					<p>
+						Mit einem Dashboard kannst Du deine Startseite selber gestalten.<br/>
+						Erstelle dazu ein neues Dashboard und wähle dabei Panels aus, die Dich interessieren!
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="span6">
+			<!--<div class="content-panel">
+				<h3>...</h3>
+				<div class="content-panel-inner">
+					<p>
+						...
+					</p>
+				</div>
+			</div>-->
+		</div>
+	</div>
+	<div class="row-fluid">
+		<div class="span4">
+			<div class="content-panel">
+				<h3><i class="fa fa-fw fa-tachometer"></i>&nbsp;Kontrollzentrum</h3>
+				<div class="content-panel-inner">
+					<p>
+						Diese Übersichtsseite ist das Kontrollzentrum.<br/>
+						Momentan ist hier nicht viel zu sehen, da noch kein <em>Dashboard</em> erstellt wurde.<br/>
+					</p>
+					<p>
+						Um diese Funktion zu nutzen, muss man sich <a href="#" class="trigger-myModalInfoDashboardAdd">ein Dashboard erstellen</a>.
+						Dabei kann man auch gleich die ersten <em>Panels</em> hinzu fügen.<br/>
+					</p>
+					<div>
+						<button type="button" class="btn btn-block btn-success trigger-myModalInfoDashboardAdd"><i class="fa fa-fw fa-th"></i>&nbsp;ein Dashboard erstellen</button>
+					</div>
+					<br/>
+				</div>
+			</div>
+		</div>
+		<div class="span4">
+			<div class="content-panel">
+				<h3><i class="fa fa-fw fa-th"></i>&nbsp;Was ist ein Dashboard?</h3>
+				<div class="content-panel-inner">
+					<p>
+						Ein <em>Dashboard</em> ist Anordnung von mehreren Blöcken mit Informationen in einem Raster.<br/>
+						Diese Blöcke heißen <em>Panels</em> und können jederzeit hinzugefügt, verschoben oder entfernt werden.<br/>
+					</p>
+					<p>
+						<b>Tipp:</b> Man kann mehrere <em>Dashboards</em> erstellen, um zwischen verschiedene Situationen oder Ansichten zu wechseln.<br/>
+					</p>
+					<br/>
+				</div>
+			</div>
+		</div>
+		<div class="span4">
+			<div class="content-panel">
+				<h3><i class="fa fa-fw fa-square"></i>&nbsp;Was ist ein Panel?</h3>
+				<div class="content-panel-inner">
+					<p>
+						Ein <em>Panel</em> ist ein Block mit Informationen innerhalb eines <em>Dashboards</em>.
+						<b>So wie dieser Block hier.</b>
+					</p>
+					<p>
+						Die Inhalte der einzelnen <em>Panels</em> werden aus den vorhanden Informationen zusammen gestellt.<br/>
+						<em>Panels</em> und können innerhalb eines <em>Dashboards</em> jederzeits hinzugefügt, verschoben oder entfernt werden.<br/>
+						<br/>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--
+
+<div id="text-info-dashboard-empty" class="text-auth-top">
 	<div class="content-panel">
 		<h3>Dashboard</h3>
 		<div class="content-panel-inner">
@@ -40,3 +122,4 @@
 		</div>
 	</div>
 </div>
+-->
