--- a/Resource/Authentication/Backend/Local/locales/de/html/auth/local/login/bottom.html
+++ b/Resource/Authentication/Backend/Local/locales/de/html/auth/local/login/bottom.html
@@ -1,1 +1,1 @@
-<div id="text-auth-login-bottom" class="text-auth-bottom"></div>
+<!--<div id="text-auth-login-bottom" class="text-auth-bottom"></div>-->
